[package]
name = "poly-rc"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
