[package]
name = "poly-rc"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
thiserror = "2.0.18"
dotenv = "0.15.0"
#alloy = "1.6.3"
alloy = { version = "1.6.3", features = ["full", "eip712"]}

# Disable only AWS signer by unsetting its feature
alloy-signer-aws = { version = "0.0.0-reserved", optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
serde_with = "3.17.0"
rust_decimal = "1.41.0"
